fixed whitespace in thumbnails + removed link margin

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -154,7 +154,9 @@ a {
 
 .thumbnail-container {
     position: relative;
+    height: 100%;
     max-height: 78px;
+    width: 100%;
     max-width: 140px;
     overflow: hidden;
     border: 1px solid var(--color-link);
@@ -163,12 +165,9 @@ a {
 }
 
 .link-image {
+    position: relative;
     height: 100%;
     width: 100%;
-}
-
-.link-icon {
-    margin-top: 5px;
 }
 
 .video-container{
